// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider borderColor prop sets borderColor 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin-left: 0px;
  margin-right: 0px;
  border-color: #e6f4fc,#cce7f8,#add9f5,#8bc9f0,#62b6eb,#2d9ee4,#298fce,#247db4,#1d6795,#154a6b;
}

<hr
  className="c0"
/>
`;

exports[`Divider m prop sets margin 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin: 8px;
  margin-left: 0px;
  margin-right: 0px;
  border-color: borderGray;
}

<hr
  className="c0"
/>
`;

exports[`Divider renders 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin-left: 0px;
  margin-right: 0px;
  border-color: borderGray;
}

<hr
  className="c0"
/>
`;

exports[`Divider width prop sets width 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin-left: 0px;
  margin-right: 0px;
  width: 50%;
  border-color: borderGray;
}

<hr
  className="c0"
  width={0.5}
/>
`;
